--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: Health Analysis
-theme: jekyll-theme-modernist
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+# theme: jekyll-theme-modernist
