--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Health Analysis
 remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
+plugins: - jekyll-remote-theme
 # theme: jekyll-theme-modernist
