--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Health Analysis
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/cayman
 plugins: - jekyll-remote-theme
 # theme: jekyll-theme-modernist
