--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-title: Health Analysis
-remote_theme: pages-themes/cayman
-plugins: - jekyll-remote-theme
-# theme: jekyll-theme-modernist
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
